--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header> lendarioflix</header>
-    <H1> COloca a categoria do seu filme tipo ação</H1>
+    <H1> Os melhores filmes de animação</H1>
     <P> Veja a recomendação dos melhores filme do mundo</P>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/E4K7JgPJ8-s?si=fcSmzV2cgvlIwYs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>   
