--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>👑LENDARIO⭐️FLIX👑</header>
+    <header>👑LENDARIO⭐️FLIX</header>
     <H1> Os melhores filmes de animação</H1>
     <P> Veja a recomendação dos melhores filme do mundo</P>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/E4K7JgPJ8-s?si=fcSmzV2cgvlIwYs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
