--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+    <link hr.ef="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>👑LENDARIO⭐️FLIX</header>
-    <H1> Os melhores filmes de animação</H1>
-    <P> Veja a recomendação dos melhores filme do mundo</P>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/E4K7JgPJ8-s?si=fcSmzV2cgvlIwYs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <section>
+        <div class="chamada-texto">
+        <H1> Os melhores filmes de animação</H1>
+    <P> Veja a recomendação dos melhores filme do mundo</P>    
+        </div>
+    <div>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/E4K7JgPJ8-s?si=fcSmzV2cgvlIwYs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+</section>
+
 </body>
 </html>
