--- a/index.html
+++ b/index.html
@@ -7,19 +7,30 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link hr.ef="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>👑LENDARIO⭐️FLIX</header>
 
     <section>
         <div class="chamada-texto">
-        <H1> Os melhores filmes de animação</H1>
+        <H1> Os melhores filmes do mundo</H1>
     <P> Veja a recomendação dos melhores filme do mundo</P>    
         </div>
     <div>
          <iframe width="560" height="315" src="https://www.youtube.com/embed/E4K7JgPJ8-s?si=fcSmzV2cgvlIwYs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+</section>
+
+<section>]
+<h2> Outras recomendações </h2>
+<div>
+    <!--Minecraft-->
+     <a href="https://www.youtube.com/watch?v=3IVPHxs4NoM">
+        <img src="" alt="">
+     </a>
+
+</div>
 </section>
 
 </body>
