igor ama a laura

--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
 <div>
     <!--Minecraft-->
      <a href="https://www.youtube.com/watch?v=3IVPHxs4NoM">
-        <img src="" alt="">
+        <img src="image.png" alt="">
      </a>
+
+      <!--Como treinar seu dragão-->
+     <a href="https://www.youtube.com/watch?v=CWTy1ukPoYY">
+        <img src="image copy.png" alt="">
+     </a>
+
+     
+      <!-- jujutsu kaisen-->
+     <a href="https://www.youtube.com/watch?v=359noIH-wNo">
+        <img src="image copy 2.png" alt="">
+     </a>
+
 
 </div>
 </section>
